--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
                 <div class="col">
                     <div id="karusel-full" class="carousel slide carousel-fade" data-ride="carousel">
                         <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#karusel-full" data-slide-to="0" class="active"></li>
+                            <li data-target="#karusel-full" data-slide-to="1"></li>
+                            <li data-target="#karusel-full" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
